<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tracker</string>

    <string name="ble_not_supported">Bluetooth LE not supported.</string>

    <string name="optimizing">Optimizing...</string>

    <string name="day_dream">DayDream</string>
    <string name="blink_marks">Blink Marks</string>
    <string name="numbers">Numbers</string>
    <string name="chart">Chart</string>
    <string name="blinks">Blinks</string>
    <string name="whack_a_mole">Whack-A-Mole</string>
    <string name="accelerometer">Accel</string>
    <string name="grid_size">Grid size</string>
    <string name="graph_height">Graph height</string>
    <string name="min_threshold">Minimum Threshold</string>

    <string-array name="algo">
        <item>Bandpass</item>
        <item>Curve Fit</item>
        <item>Gestures</item>
        <item>Median Diff Diff</item>
        <item>Driftless</item>
    </string-array>

    <string-array name="cursor">
        <item>Circle</item>
        <item>Rectangle</item>
        <item>None</item>
    </string-array>

    <string-array name="pages">
        <item>
            Page 1\nElectrooculography (EOG/E.O.G.) is a technique for measuring the
            corneo-retinal standing potential that exists between the front and
            the back of the human eye. The resulting signal is called the electrooculogram.
            Primary applications are in ophthalmological diagnosis and in recording eye movements.
        </item>
        <item>
            Page 2\nTo measure eye movement, pairs of electrodes are typically placed either above
            and below the eye or to the left and right of the eye. If the eye moves from center
            position toward one of the two electrodes, this electrode "sees" the positive side of
            the retina and the opposite electrode "sees" the negative side of the retina.
        </item>
        <item>
            Page 3\nElectrooculography was used by Robert Zemeckis and Jerome Chen,
            the visual effects supervisor in the movie Beowulf, to enhance the performance capture
            by correctly animating the eye movements of the actors. The result was an improvement
            over the technique used for the film The Polar Express. Electrooculography,
            in addition to other neuromuscular signals, is used as a computer input method
            by the Neural Impulse Actuator.
        </item>
        <item>
            Page 4\nEye tracking is the process of measuring either the point of gaze
            (where one is looking) or the motion of an eye relative to the head.
            An eye tracker is a device for measuring eye positions and eye movement.
            Eye tracking is commonly used in a variety of different advertising media.
            Commercials, print ads, online ads and sponsored programs are all conducive
            to analysis with current eye tracking technology.
        </item>
        <item>
            Page 5\nIn real life humans have a small round focal point at the center of our gaze,
            and outside that region, most things are fuzzy and out of focus. This carries over
            into our perception of virtual environments. Thus, even though most VR gear projects
            a roughly 90 degree field of view, our eyes are only focusing (and bringing into focus)
            a small portion of it at any one time. The rest of any crisp, flawlessly rendered image
            is completely wasted on our eyes. Foveated rendering is a process which uses
            the information given by eye tracking in VR games and other apps to only fully
            render the objects within the direct line of sight of the viewer.
        </item>
        <item>
            Page 6\nMost of the first uses of AR/VR eye tracking will be to improve general
            AR/VR headset comfort and usability. That is because as a direct input device
            eye tracking is actually fairly frustrating and useless. However, as a general
            contextual signal indicating possible user intent or attentional focus,
            it is quite useful. Many use cases for eye tracking will work in the background
            like graphics rendering resource allocation (Foveated Rendering), data pre-fetch
            and multi-modal smart 3D object selection. What all of these use cases have in common
            is that, when working well, you don’t notice that they are doing anything.
        </item>
        <item>
            Page 7\nEye movements are the most frequent (around 3 per second), fastest
            (around 150–250 milliseconds), and mechanically simplest (one joint, no inertial
            complexities) voluntary motor behavior in humans. Therefore, tracking eye movement
            has been regarded as an great way to detect voluntary commands and changes in
            physiological status. There are a number of methods for measuring eye movement.
            Currently the most widely used are video-based eye trackers in which a camera
            focuses on one or both eyes and records their movement as the viewer looks at
            some kind of stimulus.
        </item>
        <item>
            Page 8\nMost modern eye trackers utilize near-infrared technology along with a
            high-resolution camera to track gaze direction. Near-infrared light is directed
            toward the center of the eyes (pupil) causing visible reflections in the cornea
            (outermost layer of the eye), which are tracked by a camera. It is based on the
            principle that, if a fixed light source is directed at the eye, the amount of light
            reflected back to a fixed detector will vary with the eye’s position.
            A number of IR light sources are used for illumination, and photo detectors aimed at
            receiving the reflected light for picking up the signal.
        </item>
        <item>
            Page 9\nA human eyeball can be assumable as a spherical battery that the centre of
            cornea is positive and the retina is negative. Imagine that the battery like this is
            embedded in an eye socket and rotates around the torsional centre of eye. Consequently,
            the micro-currents flow radially from the positive pole to the negative pole of
            the battery through the conductive tissue in eye. These currents generate the
            standing potentials (Electro-Oculograms) around the eye.
        </item>
        <item>
            Page 10\nThe principle behind this is the sensing of the electrical “signature”
            of eye’s movement. If electrodes are located symmetrically on either side of the eyes,
            and the eye is looking straight ahead, the dipole is at right angles to the electric
            field detected by the electrodes and the resultant output is zero. When the eye moves,
            there exists a voltage shift with reference to the straight ahead position.
        </item>
    </string-array>

</resources>
