<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="care.dovetail.tracker.MainActivity" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toggles"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center">

        <ToggleButton
            android:id="@+id/dayDream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/day_dream"
            android:textOn="@string/day_dream"/>
        <ToggleButton
            android:id="@+id/showGestures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textOff="@string/gestures"
            android:textOn="@string/gestures"/>
        <ToggleButton
            android:id="@+id/showNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textOff="@string/numbers"
            android:textOn="@string/numbers"/>
        <ToggleButton
            android:id="@+id/showChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textOff="@string/chart"
            android:textOn="@string/chart"/>
        <ToggleButton
            android:id="@+id/whackAMole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textOff="@string/whack_a_mole"
            android:textOn="@string/whack_a_mole"/>
    </LinearLayout>

    <TextView
        android:text="@string/grid_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/num_steps_label"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/toggles"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <SeekBar
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/num_steps_label"
        android:id="@+id/num_steps"
        android:max="15"
        android:layout_toStartOf="@+id/num_steps_value"/>

    <TextView
        android:id="@+id/num_steps_value"
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/num_steps_label"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
